# GodeX

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  HANDOFF.md  README.md  README.zh-CN.md  args.ts  biome.json  bunfig.toml  godex-new.yaml  godex.deepseek.yaml  godex.minimax.yaml  godex.xiaomi.yaml  godex.yaml  godex.zhipu.yaml  llms.txt  package.json  preview.html  test-setup.ts  test_minimax.py  tsconfig.json
.github/: PULL_REQUEST_TEMPLATE.md  SECURITY.md  codecov.yml  dependabot.yml  release.yml
announcements/: plugin-system-handoff.md  v1.0.0-promo.md  v1.0.0-release.md  v1.0.1-fix.md  v1.0.2-studio-ui.md  v1.0.3-studio-v2.md  v2.0.0-studio-native.md
chrome-browser-mcp/: .gitignore  package-lock.json  package.json  start-mcp.bat  start-mcp.ps1  start-stdio.ps1  test_mcp.py  tsconfig.json  verify.py
handoffs/: 2026-07-09-fclass-step1-bridge-accessor-rename.md  2026-07-09-path-a-d-anthropic.md  2026-07-10-phase-b-anthropic-design.md  2026-07-11-r30-anthropic-coalesce.md
probes/: .gitignore  README.md  anthropic_probe.py  image-recheck-out.txt  image_recheck.py  (+8 more)
studio-tauri/model-probe/src-tauri/: Cargo.toml  tauri.conf.json
studio-tauri/model-probe/src-tauri/capabilities/: main.json
studio-tauri/model-probe/src-tauri/src/: lib.rs  main.rs
studio-tauri/src-tauri/: Cargo.toml  tauri.conf.json
studio-tauri/src-tauri/capabilities/: main.json
studio-tauri/src-tauri/examples/: test_probe.rs  test_read_providers.rs
studio-tauri/src-tauri/src/: commands.rs  config.rs  godex.rs  lib.rs  main.rs  probe.rs  state.rs  strip_ansi.rs
(+1037 files in other folders)
